--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -28,9 +28,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label for="id_password_check" class="col-sm-3 col-form-label">Repeat new password</label>
+        <label for="id_password2" class="col-sm-3 col-form-label">Repeat new password</label>
         <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password_check" name="password_check">
+            <input type="password" class="form-control" id="id_password2" name="password2">
         </div>
     </div>
     <div class="form-group row">
