--- a/AskMe/templates/signup.html
+++ b/AskMe/templates/signup.html
@@ -29,7 +29,7 @@
     <div class="form-group row">
         <label class="col-sm-3 col-form-label">Repeat password</label>
         <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password_check" name="password_check" required>
+            <input type="password" class="form-control" id="id_password2" name="password2" required>
         </div>
     </div>
     <div class="form-group row">
