--- a/AskMe/templates/inc/answer.html
+++ b/AskMe/templates/inc/answer.html
@@ -9,11 +9,11 @@
     </div>
     <div class="media-body px-1">
         <p>{{ answer.text }}</p>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" checked>
-            <label class="form-check-label">
+        <div class="form-check is-valid">
+            <input class="form-check-input" type="checkbox" id="id_is_correct" {% if answer.is_correct %} checked {% endif %} {% if question.profile_id != request.user.profile %} disabled {% endif %}>
+            <label class="form-check-label" for="id_is_correct" {% if answer.is_correct %} style="color: #28a745;" {% endif %}>
 				Correct!
             </label>
         </div>
-	</div>
+    </div>
 </div>
