--- a/AskMe/templates/settings.html
+++ b/AskMe/templates/settings.html
@@ -16,51 +16,31 @@
         </div>
     {% endif %}
 
+    {% for form_field in form %}
+        <div class="form-group row mt-2">
+            <label class="col-sm-3 col-form-label">{{ form_field.label }}</label>
+            <div class="col-sm-9">
+                {{ form_field }}
+                <div class="invalid-feedback d-block">
+                    {{ form_field.errors }}
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
+    {% for avatar in ava %}
     <div class="form-group row mt-2">
-        <label for="id_username" class="col-sm-3 col-form-label">Login</label>
+        <label class="col-sm-3 col-form-label">{{ avatar.label }}</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="id_username" name="username" value="{{ request.user.username }}">
+            {{ avatar }}
+            <div class="mt-2"><img src="{{ request.user.profile.avatar.url }}" class="img-settings img-thumbnail"></div>
             <div class="invalid-feedback d-block">
-                {{ form.username.errors }}
+                {{ avatar.errors }}
             </div>
         </div>
     </div>
-    <div class="form-group row mt-2">
-        <label for="id_email" class="col-sm-3 col-form-label">Email</label>
-        <div class="col-sm-9">
-            <input type="email" class="form-control" id="id_email" name="email" value="{{ request.user.email }}">
-            <div class="invalid-feedback d-block">
-                {{ form.email.errors }}
-            </div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_password" class="col-sm-3 col-form-label">New password</label>
-        <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password" name="password">
-            <div class="invalid-feedback d-block">
-                {{ form.password.errors }}
-            </div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_password2" class="col-sm-3 col-form-label">Repeat new password</label>
-        <div class="col-sm-9">
-            <input type="password" class="form-control" id="id_password2" name="password2">
-            <div class="invalid-feedback d-block">
-                {{ form.password2.errors }}
-            </div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="id_avatar" class="col-sm-3 col-form-label">Upload avatar</label>
-        <div class="col-sm-5">
-            <img src="{{ request.user.profile.avatar.url }}" class="img-settings img-thumbnail">
-            <div class="custom-file mt-2">
-                {{ ava }}
-            </div>
-        </div>
-    </div>
+    {% endfor %}
+
     <div class="form-group row">
         <div class="col-sm-3"></div>
         <div class="col-sm-9">
