--- a/AskMe/templates/inc/base.html
+++ b/AskMe/templates/inc/base.html
@@ -33,8 +33,8 @@
 
 	<script src="{% static '/js/jquery.min.js' %}"></script>
 	<script src="{% static '/js/csrf.js' %}"></script>
-<!--	<script src="{% static '/js/popper.min.js' %}"></script>-->
-<!--	<script src="{% static '/js/bootstrap.js' %}"></script>-->
+	<script src="{% static '/js/popper.min.js' %}"></script>
+	<script src="{% static '/js/bootstrap.js' %}"></script>
 
 	{% block jscode %}
 	{% endblock jscode %}
